--- a/AddressBook/src/AddressBook.Web/AddressBook.Web.csproj
+++ b/AddressBook/src/AddressBook.Web/AddressBook.Web.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Locations\CreateModal.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Pages\**\*.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -58,6 +62,18 @@
     <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.0.4" />
     <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="8.0.4" />
     <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Locations\CreateModal.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Locations\CreateModal.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Locations\CreateModal.cshtml" />
   </ItemGroup>
 
 </Project>
